k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: hello-mike
  labels:
    name: hello-mike
