k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api-v1
  namespace: hello-mike
  labels:
    app: hello-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-api
      version: v1
  template:
    metadata:
      labels:
        app: hello-api
        version: v1
    spec:
      containers:
        - name: hello-api
          image: mihailrc/hello_world:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9999
