k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-api-pod
spec:
  containers:
  - name: hello-api-pod
    image: mihailrc/hello_world:latest
    imagePullPolicy: Always
    ports:
      - containerPort: 9999
