k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api
  namespace: hello-mike
  labels:
    app: hello-api
    service: hello-api
spec:
  ports:
    - port: 9999
      targetPort: 9999
      name: http
  selector:
    app: hello-api
