k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-api
  namespace: hello-mike
spec:  
  hosts:
    - mrc.preprod.esp.dot.state.oh.us
  gateways:
    - istio-system/istio-gateway
  http:
  - match:
    - name: "default-route"
      uri:
        prefix: "/hello"    
      ignoreUriCase: true    
    route:
    - destination:
        host: hello-api.hello-mike.svc.cluster.local
        port:
          number: 9999    
---
